@@ -74,6 +74,12 @@ Version 4.6  [ (under development) ]
         Class NTriangulation:
             - New routines isBall() and knowsBall() for recognising the
               3-dimensional ball.
+            - Completely overhauled collapseEdge().  The eligiblity checks for
+              this routine are now correct and not overly conservative, which
+              makes this routine both useful and safe to use.  The big warning
+              is now gone from the collapseEdge() documentation as a result.
+            - Routine simplifyToLocalMinimum() now collapses edges, which
+              makes a big difference for multiple-vertex triangulations.
             - Removed crushMaximalForest(), which (as the documentation has
               pointed out since the first release) has never worked properly,
               and which is therefore never actually used.
